apps/media/musicseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicseerr
  namespace: media
  labels:
    app: musicseerr
    app.kubernetes.io/name: musicseerr
    app.kubernetes.io/instance: musicseerr
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: musicseerr
  ports:
    - port: 8688
      targetPort: 8688
  type: ClusterIP
