apps/media/musicseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicseerr
  namespace: media
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - musicseerr.phoenyxlab.xyz
  rules:
    - host: musicseerr.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: musicseerr
                port:
                  number: 8688
